--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
+    "@types/jquery": "^3.5.1",
     "@types/node": "^12.12.54",
     "@types/react-router-dom": "^5.1.5",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.2",
+    "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "typescript": "^3.8.2"
@@ -43,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/material-ui": "^0.21.7",
     "@types/react": "^16.9.45",
     "@types/react-dom": "^16.9.8"
   }
